# cpp-tutorial-primer

./: .gitignore  1_12.cpp  1_16.cpp  1_19.cpp  1_2.cpp  1_20.cpp  1_4.cpp  1_6.cpp  2_1.cpp  2_3.cpp  2_4.cpp  2_5.cpp  2_7.cpp  CMakeLists.txt  README.md  exersice_1_10.cpp  exersice_1_11.cpp  exersice_1_13.cpp  exersice_1_17.cpp  exersice_1_3.cpp  exersice_1_8.cpp  exersice_1_9.cpp  rename.sh  test.cpp  test2.cpp  test3.cpp  test5.cpp
ch01/: 1_10.cpp  1_11.cpp  1_14.cpp  1_17.cpp  1_19.cpp  1_20.cpp  1_3.cpp
